--- a/src/main/java/com/google/api/generator/gapic/model/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/model/BUILD.bazel
@@ -21,6 +21,7 @@ java_library(
         "@com_google_auto_value_auto_value//jar",
         "@com_google_auto_value_auto_value_annotations//jar",
         "@com_google_code_findbugs_jsr305//jar",
+        "@com_google_googleapis//gapic/metadata:metadata_java_proto",
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/rpc:rpc_java_proto",
         "@com_google_guava_guava//jar",
