--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -19,6 +19,7 @@ package(default_visibility = ["//visibility:public"])
 INTEGRATION_TEST_LIBRARIES = [
     "asset",
     "credentials",
+    "kms",
     "logging",
     "redis",
     "library",  # No gRPC service config.
@@ -209,5 +210,41 @@ java_gapic_assembly_gradle_pkg(
         "@com_google_googleapis//google/iam/credentials/v1:credentials_java_grpc",
         "@com_google_googleapis//google/iam/credentials/v1:credentials_java_proto",
         "@com_google_googleapis//google/iam/credentials/v1:credentials_proto",
+    ],
+)
+
+# KMS (for mixins).
+java_gapic_library(
+    name = "kms_java_gapic",
+    srcs = ["@com_google_googleapis//google/cloud/kms/v1:kms_proto_with_info"],
+    grpc_service_config = "@com_google_googleapis//google/cloud/kms/v1:cloudkms_grpc_service_config.json",
+    # For the IAM mixin.
+    service_yaml = "cloudkms_test_mixins_v1.yaml",
+    test_deps = [
+        "@com_google_googleapis//google/cloud/kms/v1:kms_java_grpc",
+        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
+    ],
+    deps = [
+        "@com_google_googleapis//google/cloud/kms/v1:kms_java_proto",
+        "@com_google_googleapis//google/iam/v1:iam_java_proto",
+    ],
+)
+
+java_gapic_test(
+    name = "kms_java_gapic_test_suite",
+    test_classes = [
+        "com.google.cloud.kms.v1.KeyManagementServiceClientTest",
+    ],
+    runtime_deps = [":kms_java_gapic_test"],
+)
+
+# Open Source Packages
+java_gapic_assembly_gradle_pkg(
+    name = "google-cloud-kms-v1-java",
+    deps = [
+        ":kms_java_gapic",
+        "@com_google_googleapis//google/cloud/kms/v1:kms_java_grpc",
+        "@com_google_googleapis//google/cloud/kms/v1:kms_java_proto",
+        "@com_google_googleapis//google/cloud/kms/v1:kms_proto",
     ],
 )
