--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
@@ -16,6 +16,8 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic/model",
+        "@com_google_googleapis//gapic/metadata:metadata_java_proto",
         "@com_google_protobuf//:protobuf_java",
+        "@com_google_protobuf//:protobuf_java_util",
     ],
 )
