Add codecov config file and add codecov github action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,6 +60,10 @@ jobs:
           name: artifacts
           path: ~/artifacts
 
+      - name: Tests Coverage
+        uses: actions/codecov-action@v1
+
+
   license-header:
     runs-on: ubuntu-latest
     steps:
