add name in github action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,8 @@ jobs:
 
       - name: Tests Coverage
         uses: actions/codecov-action@v1
-
+        with:
+          name: actions ${{ matrix.java }}
 
   license-header:
     runs-on: ubuntu-latest
