--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
         java: [8, 11]
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth:1
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
@@ -63,7 +65,7 @@ jobs:
       - name: Generate Code Coverage Report
         run: bazel coverage //src/test/... --combined_report=lcov
 
-      - name: Code Coverage
+      - name: Upload Code Coverage Report
         uses: codecov/codecov-action@v1
         with:
           name: actions ${{ matrix.java }}
