--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -17,6 +17,10 @@ UPDATE_GOLDENS_TESTS = [
     "ServiceStubClassComposerTest",
 ]
 
+COMMON_SRCS = [
+    "TestProtoLoaderUtil.java",
+]
+
 TESTS = UPDATE_GOLDENS_TESTS + [
     "RetrySettingsComposerTest",
 ]
@@ -72,7 +76,7 @@ java_proto_library(
     name = test_name,
     srcs = [
         "{0}.java".format(test_name),
-    ],
+    ] + COMMON_SRCS,
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
