--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,8 +46,11 @@ jobs:
           echo "The old one will disappear after 7 days."
 
       - name: Unit Tests
-        uses: actions/upload-artifact@v2
         run: bazel --batch test $(bazel query "//src/test/..." | grep "Test$") --noshow_progress
+
+      - name: Save Unit Test Artifacts
+        #if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
         with:
           name: Unit Test Artifacts
           path: |
@@ -57,7 +60,7 @@ jobs:
       - name: Integration Tests
         run: bazel --batch test //test/integration:asset //test/integration:credentials //test/integration:kms //test/integration:logging //test/integration:redis //test/integration:library --noshow_progress
       - name: Save Integration Test Artifacts
-        post-if: ${{ failure() }}
+        #if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
           name: Integration Test Artifacts
