--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,33 +47,30 @@ jobs:
 
       - name: Unit Tests
         run: bazel --batch test $(bazel query "//src/test/..." | grep "Test$") --noshow_progress
-
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
           name: unit-test-artifacts
-          path: |
-            ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/src/test/java/com/google/api/generator/engine/ast/*/test.log
-            ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/src/test/java/com/google/api/generator/gapic/composer/*/test.log
+          path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/*
+          retention-days: 5
 
       - name: Integration Tests
         run: bazel --batch test //test/integration:asset //test/integration:credentials //test/integration:kms //test/integration:logging //test/integration:redis //test/integration:library --noshow_progress
-      - name: Save Integration Test Artifacts
-        #if: ${{ failure() }}
-        uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
         with:
-          name: Integration Test Artifacts
-          path: bazel-out/*/testlogs/test/integration/*/test.log
+          name: integration-test-artifacts
+          path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/*
+          retention-days: 5
 
       - name: Java Linter
         run: bazel --batch  build //:google_java_format_verification
-
-      - name: Save Linter Artifacts
-        #if: ${{ failure() }}
-        uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
         with:
           name: Linter Artifacts
-          path: bazel-bin/google_java_format_verification.txt
+          path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-bin/google_java_format_verification.txt
+          retention-days: 5
 
   license-header:
     runs-on: ubuntu-latest
