--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,19 +47,14 @@ jobs:
 
       - name: Unit Tests
         run: bazel --batch test $(bazel query "//src/test/..." | grep "Test$") --noshow_progress
-      - uses: actions/upload-artifact@v2
-        if: ${{ failure() }}
-        with:
-          name: unit-test-artifacts
-          path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/*
-          retention-days: 5
 
       - name: Integration Tests
         run: bazel --batch test //test/integration:asset //test/integration:credentials //test/integration:kms //test/integration:logging //test/integration:redis //test/integration:library --noshow_progress
+
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
-          name: integration-test-artifacts
+          name: test-artifacts
           path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/*
           retention-days: 5
 
@@ -68,7 +63,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
-          name: Linter Artifacts
+          name: linter-artifacts
           path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-bin/google_java_format_verification.txt
           retention-days: 5
 
