--- a/gapic-generator-java/.github/workflows/ci.yaml
+++ b/gapic-generator-java/.github/workflows/ci.yaml
@@ -18,8 +18,6 @@ jobs:
         java: [8, 11]
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
@@ -53,23 +51,15 @@ jobs:
       - name: Integration Tests
         run: bazel --batch test //test/integration:asset //test/integration:credentials //test/integration:kms //test/integration:logging //test/integration:redis //test/integration:library --noshow_progress
 
+      - uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
+        with:
+          name: test-artifacts
+          path: ~/.cache/bazel/*/*/*/gapic_generator_java/bazel-out/*/testlogs/*
+          retention-days: 5
+
       - name: Java Linter
         run: bazel --batch  build //:google_java_format_verification
-
-      - name: Save artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifacts
-          path: ~/artifacts
-
-      - name: Generate Code Coverage Report
-        run: bazel coverage //src/test/... --combined_report=lcov
-
-      - name: Upload Code Coverage Report
-        uses: codecov/codecov-action@v1
-        with:
-          name: actions ${{ matrix.java }}
-          files: ./bazel-out/_coverage/_coverage_report.dat
 
   license-header:
     runs-on: ubuntu-latest
