--- a/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_java//java:defs.bzl", "java_test")
+load("@rules_java//java:defs.bzl", "java_proto_library", "java_test")
 
 package(default_visibility = ["//visibility:public"])
 
