chore: temporarily disable codecov

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,15 +70,15 @@ jobs:
           java-version: 8
       - run: java -version
 
-      - name: Generate Code Coverage Report
-        # Run only test targets, and not golden_update targets.
-        run: bazel coverage  $(bazel query "src/test/..." | grep "Test$")  --combined_report=lcov
-
-      - name: Upload Code Coverage Report
-        uses: codecov/codecov-action@v1
-        with:
-          name: actions ${{ matrix.java }}
-          files: ./bazel-out/_coverage/_coverage_report.dat
+#       - name: Generate Code Coverage Report
+#         # Run only test targets, and not golden_update targets.
+#         run: bazel coverage  $(bazel query "src/test/..." | grep "Test$")  --combined_report=lcov
+# 
+#       - name: Upload Code Coverage Report
+#         uses: codecov/codecov-action@v1
+#         with:
+#           name: actions ${{ matrix.java }}
+#           files: ./bazel-out/_coverage/_coverage_report.dat
 
   license-header:
     runs-on: ubuntu-latest
