chore: fix release (#213)

--- a/api-common-java/.kokoro/presubmit/linkage-monitor.cfg
+++ b/api-common-java/.kokoro/presubmit/linkage-monitor.cfg
@@ -7,6 +7,6 @@ env_vars: {
 }
 
 env_vars: {
-  key: "REPORT_COVERAGE"
-  value: "true"
+  key: "TRAMPOLINE_BUILD_FILE"
+  value: "github/api-common-java/.kokoro/linkage-monitor.sh"
 }
