--- a/api-common-java/.kokoro/presubmit/common.cfg
+++ b/api-common-java/.kokoro/presubmit/common.cfg
@@ -4,6 +4,7 @@
 action {
   define_artifacts {
     regex: "**/*sponge_log.xml"
+    regex: "**/*sponge_log.txt"
   }
 }
 
@@ -21,4 +22,13 @@ env_vars: {
 env_vars: {
   key: "JOB_TYPE"
   value: "test"
+}
+
+before_action {
+  fetch_keystore {
+    keystore_resource {
+      keystore_config_id: 73713
+      keyname: "dpebot_codecov_token"
+    }
+  }
 }
