--- a/api-common-java/.kokoro/release/publish_javadoc.cfg
+++ b/api-common-java/.kokoro/release/publish_javadoc.cfg
@@ -1,13 +1,17 @@
 # Format: //devtools/kokoro/config/proto/build.proto
+
+gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/doc-templates/"
+
 env_vars: {
-    key: "STAGING_BUCKET"
-    value: "docs-staging"
+  key: "STAGING_BUCKET"
+  value: "docs-staging"
 }
 
 env_vars: {
-    key: "TRAMPOLINE_BUILD_FILE"
-    value: "github/api-common-java/.kokoro/release/publish_javadoc.sh"
+  key: "TRAMPOLINE_BUILD_FILE"
+  value: "github/api-common-java/.kokoro/release/publish_javadoc.sh"
 }
+
 
 before_action {
   fetch_keystore {
