--- a/api-common-java/.kokoro/release/snapshot.cfg
+++ b/api-common-java/.kokoro/release/snapshot.cfg
@@ -2,5 +2,5 @@
 
 env_vars: {
   key: "TRAMPOLINE_BUILD_FILE"
-  value: "github/api-common-java/.kokoro/release/promote.sh"
+  value: "github/api-common-java/.kokoro/release/snapshot.sh"
 }
