chore: Pre-DIREGAPIC Refactoring #1
 This is as minimal of a PR that I could make stuch that:
 1) It compiles and tests run single composer plus minimal
 2) All the key changes are present (abstract/grpc class, comment composer, class names, golden files move)

 I had to add a few quite ugly and artificial   constructs:
 fake `ClassComposer` under `composer` package which simply extends `composer.common.Composer` to void changing the rest of the classes
 put back static methods in `ClassNames` and `StubCommentComposer` and `TestProtoLoaderUtil` (for the same reasons as above). All of those chagnes are marked with `// TODO: remove after Pre-DIREGAPIC refactoring is fully merged` statement.

--- a/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
@@ -3,25 +3,12 @@ load("//:rules_bazel/java/java_diff_test.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
-UPDATE_GOLDENS_TESTS = [
-    "BatchingDescriptorComposerTest",
-    "ComposerTest",
-    "GrpcServiceCallableFactoryClassComposerTest",
-    "GrpcServiceStubClassComposerTest",
-    "MockServiceClassComposerTest",
-    "MockServiceImplClassComposerTest",
-    "ServiceClientClassComposerTest",
-    "ServiceClientTestClassComposerTest",
-    "ServiceStubSettingsClassComposerTest",
-    "ServiceStubClassComposerTest",
+TESTS = [
+    "ServiceSettingsClassComposerTest",
 ]
 
 COMMON_SRCS = [
-    "TestProtoLoaderUtil.java",
-]
-
-TESTS = UPDATE_GOLDENS_TESTS + [
-    "RetrySettingsComposerTest",
+    "GrpcTestProtoLoader.java",
 ]
 
 TEST_DEPS = [
@@ -31,6 +18,8 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/engine/writer",
     "//src/main/java/com/google/api/generator/gapic/composer",
     "//src/main/java/com/google/api/generator/gapic/composer/common",
+    "//src/main/java/com/google/api/generator/gapic/composer/grpc",
+    "//src/test/java/com/google/api/generator/gapic/composer/common",
     "//src/test/java/com/google/api/generator/test/framework:asserts",
     "//src/test/java/com/google/api/generator/test/framework:utils",
     "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
@@ -41,8 +30,6 @@ TEST_DEPS = [
     "//src/test/java/com/google/api/generator/gapic/testdata:deprecated_service_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
-    "//src/test/java/com/google/api/generator/gapic/composer/common",
-    "//src/test/java/com/google/api/generator/gapic/composer/constants",
     "@com_google_api_api_common//jar",
     "@com_google_api_gax_java//gax",
     "@com_google_api_api_common",
@@ -80,16 +67,15 @@ java_proto_library(
         "{0}.java".format(test_name),
     ] + COMMON_SRCS,
     data = [
-        "//src/test/java/com/google/api/generator/gapic/composer/goldens:goldens_files",
+        "//src/test/java/com/google/api/generator/gapic/composer/grpc/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.grpc.{0}".format(test_name),
     deps = TEST_DEPS,
 ) for test_name in TESTS]
 
-TEST_CLASS_DIR = "com.google.api.generator.gapic.composer."
-# Run `bazel run src/test/java/com/google/api/generator/gapic/composer:testTargetName_update`
+# Run `bazel run src/test/java/com/google/api/generator/gapic/composer/grpc:testTargetName_update`
 # to update goldens as expected generated code.
 # `ServiceClient*` tests are not supported now since they are still in active development.
 
@@ -99,10 +85,10 @@ TEST_CLASS_DIR = "com.google.api.generator.gapic.composer."
         "{0}.java".format(test_name),
     ] + COMMON_SRCS,
     data = [
-        "//src/test/java/com/google/api/generator/gapic/composer/goldens:goldens_files",
+        "//src/test/java/com/google/api/generator/gapic/composer/grpc/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.grpc.{0}".format(test_name),
     deps = TEST_DEPS,
-) for test_name in UPDATE_GOLDENS_TESTS]
+) for test_name in TESTS]
