--- a/src/main/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -3,14 +3,14 @@ load("@rules_java//java:defs.bzl", "java_library")
 package(default_visibility = ["//visibility:public"])
 
 filegroup(
-    name = "composer_files",
+    name = "common_files",
     srcs = glob(["*.java"]),
 )
 
 java_library(
-    name = "composer",
+    name = "common",
     srcs = [
-        ":composer_files",
+        ":common_files",
     ],
     deps = [
         "//:service_config_java_proto",
@@ -18,9 +18,7 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic:status_java_proto",
         "//src/main/java/com/google/api/generator/gapic/composer/comment",
-        "//src/main/java/com/google/api/generator/gapic/composer/common",
         "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
-        "//src/main/java/com/google/api/generator/gapic/composer/grpc",
         "//src/main/java/com/google/api/generator/gapic/composer/resourcename",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/composer/store",
@@ -29,8 +27,10 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "//src/main/java/com/google/api/generator/util",
         "@com_google_api_api_common//jar",
-        "@com_google_api_gax_java//gax",
+        "@com_google_api_gax_java//gax:gax",
+        "@com_google_api_gax_java//gax:gax_testlib",
         "@com_google_api_gax_java//gax-grpc:gax_grpc",
+        "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
         "@com_google_code_findbugs_jsr305//jar",
         "@com_google_googleapis//gapic/metadata:metadata_java_proto",
         "@com_google_googleapis//google/api:api_java_proto",
