build: configure branch 1.63.0-sp as a release branch (#1367)
enable releases

--- a/gax-java/.github/release-please.yml
+++ b/gax-java/.github/release-please.yml
@@ -1,2 +1,6 @@
 releaseType: java-yoshi
 bumpMinorPreMajor: true
+branches:
+  - releaseType: java-lts
+    bumpMinorPreMajor: true
+    branch: 1.63.0-sp
