build: allow release-please to handle release tagging (#227)

--- a/api-common-java/.github/release-please.yml
+++ b/api-common-java/.github/release-please.yml
@@ -1,6 +1,8 @@
 releaseType: java-yoshi
 bumpMinorPreMajor: true
+handleGHRelease: true
 branches:
   - releaseType: java-lts
     bumpMinorPreMajor: true
     branch: 1.10.1-sp
+    handleGHRelease: true
