build: fix required checks (#228)
codecov is not required

--- a/api-common-java/.github/sync-repo-settings.yaml
+++ b/api-common-java/.github/sync-repo-settings.yaml
@@ -5,8 +5,8 @@ branchProtectionRules:
   - pattern: master
     isAdminEnforced: true
     requiredStatusCheckContexts:
-      - codecov/patch
-      - codecov/project
+      - units
+      - format
       - cla/google
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
@@ -14,8 +14,8 @@ branchProtectionRules:
   - pattern: 1.10.1-sp
     isAdminEnforced: true
     requiredStatusCheckContexts:
-      - codecov/patch
-      - codecov/project
+      - units
+      - format
       - cla/google
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
