--- a/gax-java/.github/sync-repo-settings.yaml
+++ b/gax-java/.github/sync-repo-settings.yaml
@@ -28,6 +28,19 @@ branchProtectionRules:
       - units (8)
       - units (11)
       - cla/google
+  - pattern: 1.64.0-sp
+    isAdminEnforced: true
+    requiredApprovingReviewCount: 1
+    requiresCodeOwnerReviews: true
+    requiresStrictStatusChecks: true
+    requiredStatusCheckContexts:
+      - bazel
+      - linkage-monitor (8)
+      - linkage-monitor (11)
+      - units (7)
+      - units (8)
+      - units (11)
+      - cla/google
 permissionRules:
   - team: yoshi-admins
     permission: admin
