chore: upgrade java unit tests to "medium" (hopefuly will fix failure for java8 tests)

--- a/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
@@ -69,6 +69,7 @@ java_proto_library(
 
 [java_test(
     name = test_name,
+    size = "medium",
     srcs = [
         "{0}.java".format(test_name),
     ] + COMMON_SRCS,
