--- a/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/BUILD.bazel
@@ -21,6 +21,7 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/composer/common",
         "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
         "//src/main/java/com/google/api/generator/gapic/composer/grpc",
+        "//src/main/java/com/google/api/generator/gapic/composer/rest",
         "//src/main/java/com/google/api/generator/gapic/composer/resourcename",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
         "//src/main/java/com/google/api/generator/gapic/composer/store",
